refactor: homepage changed for favorites

--- a/all-flats/index.html
+++ b/all-flats/index.html
@@ -44,7 +44,7 @@
           X
         </div>
         <div id="mobileLinksList">
-          <a href="/index.html">Homepage</a>
+          <a href="/index.html">Favorites</a>
             <a href="/all-flats/index.html">All flats</a>
             <a href="/new-flat/index.html">New flat</a>
             <a
@@ -114,14 +114,14 @@
         <div id="logoAndNav">
           <h1>RentEase</h1>
           <div id="pagesLinks">
-            <a href="/index.html">Homepage</a>
+            <a href="/index.html">Favorites</a>
             <a href="/all-flats/index.html">All flats</a>
             <a href="/new-flat/index.html">New flat</a>
           </div>
         </div>
         <div>
           <div id="usernameAndLogout">
-            <p id="username">Hello matheus</p>
+            <p id="username"></p>
             <span>|</span>
             <a
               class="updateProfile"
