--- a/update-profile/index.html
+++ b/update-profile/index.html
@@ -40,7 +40,7 @@
         X
       </div>
       <div id="mobileLinksList">
-        <a href="/index.html">Homepage</a>
+        <a href="/index.html">Favorites</a>
           <a href="/all-flats/index.html">All flats</a>
           <a href="/new-flat/index.html">New flat</a>
           <a
@@ -66,7 +66,7 @@
       <div id="logoAndNav">
         <h1>RentEase</h1>
         <div id="pagesLinks">
-          <a href="/index.html">Homepage</a>
+          <a href="/index.html">Favorites</a>
           <a href="/all-flats/index.html">All flats</a>
           <a href="/new-flat/index.html">New flat</a>
         </div>
